# backend/src/domains/academics/reviews/reviews.v2.routes.ts
@@ -8,28 +8,28 @@ const router = express.Router();
 router.get(
   '/',
   adminMiddleware,
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Get all reviews with optional filter'
   ReviewController.getAll
 );
 
 router.get(
   '/popular',
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Get N most liked reviews'
   ReviewController.getMostLiked
 );
 
 router.get(
   '/:unit',
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Get all reviews for a specific unit'
   ReviewController.getByUnit
 );
 
 router.get(
   '/user/:userId',
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Get all reviews by a specific user'
   ReviewController.getByUser
 );
@@ -37,7 +37,7 @@ router.get(
 router.post(
   '/:unit/create',
   userMiddleware,
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Create a review for a specific unit'
   ReviewController.createReview
 );
@@ -45,7 +45,7 @@ router.post(
 router.put(
   '/update/:reviewId',
   userMiddleware,
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Update a review by ID'
   ReviewController.updateReview
 );
@@ -53,7 +53,7 @@ router.put(
 router.delete(
   '/delete/:reviewId',
   userMiddleware,
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Delete a review by ID'
   ReviewController.deleteReview
 );
@@ -61,7 +61,7 @@ router.delete(
 router.patch(
   '/toggle-reaction/:reviewId',
   userMiddleware,
-  // #swagger.tags = ['Reviews V2']
+  // #swagger.tags = ['Reviews']
   // #swagger.summary = 'Toggle like/dislike on a review'
   ReviewController.toggleReaction
 );
